# anycv

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
anycv/: inference.py  load_mnist.py
configs/: effnet.py  effnet_b0_mnist.py  mnist.py
