[tool.poetry]
name = "anycv"
version = "0.1.0"
description = "Any any mmlab task to train"
authors = ["Aleksandr Kalashnikov <sleep3r@icloud.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.0"
torchvision = "^0.18.0"
isort = "^5.9.3"
black = "^22.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_sort_within_sections=true
line_length = 100
sections=["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]


[tool.ruff]
ignore = ["E741"]
line-length = 100


[tool.setuptools.metadata]
description-file = "README.md"


[tool.mypy]
ignore_missing_imports = true